// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/shelf/authors/ can filter by name 1`] = `
<ul
  class="listCss"
  data-testid="author-list"
>
  <li
    class="listItemCss"
  >
    <div
      class="listItemLinkCss"
    >
      <a
        class="listItemLinkCss"
        href="/shelf/authors/stephen-king/"
      >
        <svg
          class="listItemAvatarCss defaultImageCss"
          fill="currentColor"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M16 8A8 8 0 110 8a8 8 0 0116 0zm-6-3a2 2 0 11-4 0 2 2 0 014 0zM8 9a5 5 0 00-4.546 2.916A5.986 5.986 0 008 14a5.986 5.986 0 004.546-2.084A5 5 0 008 9z"
            fill-rule="evenodd"
          />
        </svg>
        <svg
          class="progressRingCss"
          preserveAspectRatio="none"
          viewBox="0 0 36 36"
        >
          <g
            id="circles"
            stroke-width="1"
          >
            <circle
              class="percentBackgroundCss"
              cx="18"
              cy="18"
              fill="none"
              r="17.5"
            />
            <circle
              class="percentProgressCss"
              cx="18"
              cy="18"
              fill="none"
              r="17.5"
              stroke-dasharray="109.95574287564276 109.95574287564276"
              stroke-dashoffset="0"
            />
          </g>
        </svg>
      </a>
    </div>
    <div
      class="listItemTitleCss"
    >
      <a
        href="/shelf/authors/stephen-king/"
      >
        Stephen King
      </a>
    </div>
    <div
      class="progressStatsCss"
    >
      1
       / 
      1
    </div>
  </li>
</ul>
`;

exports[`/shelf/authors/ can sort by name 1`] = `
<ul
  class="listCss"
  data-testid="author-list"
>
  <li
    class="listItemCss"
  >
    <div
      class="listItemLinkCss"
    >
      <a
        class="listItemLinkCss"
        href="/shelf/authors/dave-draper/"
      >
        <svg
          class="listItemAvatarCss defaultImageCss"
          fill="currentColor"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M16 8A8 8 0 110 8a8 8 0 0116 0zm-6-3a2 2 0 11-4 0 2 2 0 014 0zM8 9a5 5 0 00-4.546 2.916A5.986 5.986 0 008 14a5.986 5.986 0 004.546-2.084A5 5 0 008 9z"
            fill-rule="evenodd"
          />
        </svg>
        <svg
          class="progressRingCss"
          preserveAspectRatio="none"
          viewBox="0 0 36 36"
        >
          <g
            id="circles"
            stroke-width="1"
          >
            <circle
              class="percentBackgroundCss"
              cx="18"
              cy="18"
              fill="none"
              r="17.5"
            />
            <circle
              class="percentProgressCss"
              cx="18"
              cy="18"
              fill="none"
              r="17.5"
              stroke-dasharray="109.95574287564276 109.95574287564276"
              stroke-dashoffset="0"
            />
          </g>
        </svg>
      </a>
    </div>
    <div
      class="listItemTitleCss"
    >
      <a
        href="/shelf/authors/dave-draper/"
      >
        Dave Draper
      </a>
    </div>
    <div
      class="progressStatsCss"
    >
      1
       / 
      1
    </div>
  </li>
  <li
    class="listItemCss"
  >
    <div
      class="listItemLinkCss"
    >
      <a
        class="listItemLinkCss"
        href="/shelf/authors/stephen-king/"
      >
        <svg
          class="listItemAvatarCss defaultImageCss"
          fill="currentColor"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M16 8A8 8 0 110 8a8 8 0 0116 0zm-6-3a2 2 0 11-4 0 2 2 0 014 0zM8 9a5 5 0 00-4.546 2.916A5.986 5.986 0 008 14a5.986 5.986 0 004.546-2.084A5 5 0 008 9z"
            fill-rule="evenodd"
          />
        </svg>
        <svg
          class="progressRingCss"
          preserveAspectRatio="none"
          viewBox="0 0 36 36"
        >
          <g
            id="circles"
            stroke-width="1"
          >
            <circle
              class="percentBackgroundCss"
              cx="18"
              cy="18"
              fill="none"
              r="17.5"
            />
            <circle
              class="percentProgressCss"
              cx="18"
              cy="18"
              fill="none"
              r="17.5"
              stroke-dasharray="109.95574287564276 109.95574287564276"
              stroke-dashoffset="0"
            />
          </g>
        </svg>
      </a>
    </div>
    <div
      class="listItemTitleCss"
    >
      <a
        href="/shelf/authors/stephen-king/"
      >
        Stephen King
      </a>
    </div>
    <div
      class="progressStatsCss"
    >
      1
       / 
      1
    </div>
  </li>
  <li
    class="listItemCss"
  >
    <div
      class="listItemLinkCss"
    >
      <a
        class="listItemLinkCss"
        href="/shelf/authors/richard-laymon/"
      >
        <svg
          class="listItemAvatarCss defaultImageCss"
          fill="currentColor"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M16 8A8 8 0 110 8a8 8 0 0116 0zm-6-3a2 2 0 11-4 0 2 2 0 014 0zM8 9a5 5 0 00-4.546 2.916A5.986 5.986 0 008 14a5.986 5.986 0 004.546-2.084A5 5 0 008 9z"
            fill-rule="evenodd"
          />
        </svg>
        <svg
          class="progressRingCss"
          preserveAspectRatio="none"
          viewBox="0 0 36 36"
        >
          <g
            id="circles"
            stroke-width="1"
          >
            <circle
              class="percentBackgroundCss"
              cx="18"
              cy="18"
              fill="none"
              r="17.5"
            />
            <circle
              class="percentProgressCss"
              cx="18"
              cy="18"
              fill="none"
              r="17.5"
              stroke-dasharray="109.95574287564276 109.95574287564276"
              stroke-dashoffset="0"
            />
          </g>
        </svg>
      </a>
    </div>
    <div
      class="listItemTitleCss"
    >
      <a
        href="/shelf/authors/richard-laymon/"
      >
        Richard Laymon
      </a>
    </div>
    <div
      class="progressStatsCss"
    >
      1
       / 
      1
    </div>
  </li>
  <li
    class="listItemCss"
  >
    <div
      class="listItemLinkCss"
    >
      <a
        class="listItemLinkCss"
        href="/shelf/authors/brad-schoenfeld/"
      >
        <svg
          class="listItemAvatarCss defaultImageCss"
          fill="currentColor"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M16 8A8 8 0 110 8a8 8 0 0116 0zm-6-3a2 2 0 11-4 0 2 2 0 014 0zM8 9a5 5 0 00-4.546 2.916A5.986 5.986 0 008 14a5.986 5.986 0 004.546-2.084A5 5 0 008 9z"
            fill-rule="evenodd"
          />
        </svg>
        <svg
          class="progressRingCss"
          preserveAspectRatio="none"
          viewBox="0 0 36 36"
        >
          <g
            id="circles"
            stroke-width="1"
          >
            <circle
              class="percentBackgroundCss"
              cx="18"
              cy="18"
              fill="none"
              r="17.5"
            />
            <circle
              class="percentProgressCss"
              cx="18"
              cy="18"
              fill="none"
              r="17.5"
              stroke-dasharray="109.95574287564276 109.95574287564276"
              stroke-dashoffset="0"
            />
          </g>
        </svg>
      </a>
    </div>
    <div
      class="listItemTitleCss"
    >
      <a
        href="/shelf/authors/brad-schoenfeld/"
      >
        Brad Schoenfeld
      </a>
    </div>
    <div
      class="progressStatsCss"
    >
      1
       / 
      1
    </div>
  </li>
</ul>
`;

exports[`/shelf/authors/ can sort by review count 1`] = `
<ul
  class="listCss"
  data-testid="author-list"
>
  <li
    class="listItemCss"
  >
    <div
      class="listItemLinkCss"
    >
      <a
        class="listItemLinkCss"
        href="/shelf/authors/dave-draper/"
      >
        <svg
          class="listItemAvatarCss defaultImageCss"
          fill="currentColor"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M16 8A8 8 0 110 8a8 8 0 0116 0zm-6-3a2 2 0 11-4 0 2 2 0 014 0zM8 9a5 5 0 00-4.546 2.916A5.986 5.986 0 008 14a5.986 5.986 0 004.546-2.084A5 5 0 008 9z"
            fill-rule="evenodd"
          />
        </svg>
        <svg
          class="progressRingCss"
          preserveAspectRatio="none"
          viewBox="0 0 36 36"
        >
          <g
            id="circles"
            stroke-width="1"
          >
            <circle
              class="percentBackgroundCss"
              cx="18"
              cy="18"
              fill="none"
              r="17.5"
            />
            <circle
              class="percentProgressCss"
              cx="18"
              cy="18"
              fill="none"
              r="17.5"
              stroke-dasharray="109.95574287564276 109.95574287564276"
              stroke-dashoffset="0"
            />
          </g>
        </svg>
      </a>
    </div>
    <div
      class="listItemTitleCss"
    >
      <a
        href="/shelf/authors/dave-draper/"
      >
        Dave Draper
      </a>
    </div>
    <div
      class="progressStatsCss"
    >
      1
       / 
      1
    </div>
  </li>
  <li
    class="listItemCss"
  >
    <div
      class="listItemLinkCss"
    >
      <a
        class="listItemLinkCss"
        href="/shelf/authors/stephen-king/"
      >
        <svg
          class="listItemAvatarCss defaultImageCss"
          fill="currentColor"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M16 8A8 8 0 110 8a8 8 0 0116 0zm-6-3a2 2 0 11-4 0 2 2 0 014 0zM8 9a5 5 0 00-4.546 2.916A5.986 5.986 0 008 14a5.986 5.986 0 004.546-2.084A5 5 0 008 9z"
            fill-rule="evenodd"
          />
        </svg>
        <svg
          class="progressRingCss"
          preserveAspectRatio="none"
          viewBox="0 0 36 36"
        >
          <g
            id="circles"
            stroke-width="1"
          >
            <circle
              class="percentBackgroundCss"
              cx="18"
              cy="18"
              fill="none"
              r="17.5"
            />
            <circle
              class="percentProgressCss"
              cx="18"
              cy="18"
              fill="none"
              r="17.5"
              stroke-dasharray="109.95574287564276 109.95574287564276"
              stroke-dashoffset="0"
            />
          </g>
        </svg>
      </a>
    </div>
    <div
      class="listItemTitleCss"
    >
      <a
        href="/shelf/authors/stephen-king/"
      >
        Stephen King
      </a>
    </div>
    <div
      class="progressStatsCss"
    >
      1
       / 
      1
    </div>
  </li>
  <li
    class="listItemCss"
  >
    <div
      class="listItemLinkCss"
    >
      <a
        class="listItemLinkCss"
        href="/shelf/authors/richard-laymon/"
      >
        <svg
          class="listItemAvatarCss defaultImageCss"
          fill="currentColor"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M16 8A8 8 0 110 8a8 8 0 0116 0zm-6-3a2 2 0 11-4 0 2 2 0 014 0zM8 9a5 5 0 00-4.546 2.916A5.986 5.986 0 008 14a5.986 5.986 0 004.546-2.084A5 5 0 008 9z"
            fill-rule="evenodd"
          />
        </svg>
        <svg
          class="progressRingCss"
          preserveAspectRatio="none"
          viewBox="0 0 36 36"
        >
          <g
            id="circles"
            stroke-width="1"
          >
            <circle
              class="percentBackgroundCss"
              cx="18"
              cy="18"
              fill="none"
              r="17.5"
            />
            <circle
              class="percentProgressCss"
              cx="18"
              cy="18"
              fill="none"
              r="17.5"
              stroke-dasharray="109.95574287564276 109.95574287564276"
              stroke-dashoffset="0"
            />
          </g>
        </svg>
      </a>
    </div>
    <div
      class="listItemTitleCss"
    >
      <a
        href="/shelf/authors/richard-laymon/"
      >
        Richard Laymon
      </a>
    </div>
    <div
      class="progressStatsCss"
    >
      1
       / 
      1
    </div>
  </li>
  <li
    class="listItemCss"
  >
    <div
      class="listItemLinkCss"
    >
      <a
        class="listItemLinkCss"
        href="/shelf/authors/brad-schoenfeld/"
      >
        <svg
          class="listItemAvatarCss defaultImageCss"
          fill="currentColor"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M16 8A8 8 0 110 8a8 8 0 0116 0zm-6-3a2 2 0 11-4 0 2 2 0 014 0zM8 9a5 5 0 00-4.546 2.916A5.986 5.986 0 008 14a5.986 5.986 0 004.546-2.084A5 5 0 008 9z"
            fill-rule="evenodd"
          />
        </svg>
        <svg
          class="progressRingCss"
          preserveAspectRatio="none"
          viewBox="0 0 36 36"
        >
          <g
            id="circles"
            stroke-width="1"
          >
            <circle
              class="percentBackgroundCss"
              cx="18"
              cy="18"
              fill="none"
              r="17.5"
            />
            <circle
              class="percentProgressCss"
              cx="18"
              cy="18"
              fill="none"
              r="17.5"
              stroke-dasharray="109.95574287564276 109.95574287564276"
              stroke-dashoffset="0"
            />
          </g>
        </svg>
      </a>
    </div>
    <div
      class="listItemTitleCss"
    >
      <a
        href="/shelf/authors/brad-schoenfeld/"
      >
        Brad Schoenfeld
      </a>
    </div>
    <div
      class="progressStatsCss"
    >
      1
       / 
      1
    </div>
  </li>
</ul>
`;
